# muilt-agent-hub

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: build-frontend.yml  python-ci.yml
alembic/: env.py
alembic/versions/: f268c2295e68_initial.py
app/: config.py  crypto.py  db.py  main.py
app/auth/: backend.py  manager.py  openkey.py  platform.py  schemas.py
app/core/: __init__.py  crud_router.py  exceptions.py  logging.py  middleware.py
app/models/: agent.py  api_token.py  app_log.py  call_log.py  key.py  mcp_server.py  message.py  open_key.py  prompt.py  user.py
app/routers/: admin_users.py  agents.py  api_tokens.py  auth.py  chat.py  health.py  keys.py  logs.py  mcp_servers.py  open_keys.py  openai_compat.py  prompts.py  public.py  stats.py
app/schemas/: agent.py  api_token.py  chat.py  key.py  mcp_server.py  open_key.py  prompt.py
app/services/: chat_service.py  mcp_manager.py  message_service.py  ownership.py
app/tui/: __init__.py  launcher.py
docs/ai/: AI组件库与UI资源汇总.md  Motion-Primitives详解.md  Motion动画组件设计.md  RPC轮询与消息列表渲染.md  React组件封装模式.md  XState状态机与事件驱动.md  thesis-draft-v1.md  thesis-generation-baseline.md  事件驱动消息系统.md  前端窗口管理组件.md  发布订阅与浏览器存储.md  审美直觉与设计灵感.md  新手引导与画布组件.md  流式输出与AI聊天UI.md  状态存储方案.md  目录结构与架构约定.md  视觉效果与动画.md
docs/plans/: 00-workflow.md  01-progress.md  02-roadmap.md  03-tasks.md  04-architecture.md  (+5 more)
tests/: demo_mcp_server.py  e2e.ps1  smoke_test.py
web/: .gitignore  AGENTS.md  README.md  package.json  playwright.config.ts  rsbuild.config.ts  rstest.config.ts  tsconfig.json
(+161 files in other folders)
